# angledbox_msg

./: CMakeLists.txt  README.md  package.xml
msg/: AngledBox.msg  AngledBoxArray.msg
