<?xml version="1.0"?>
<package format="2">
    <name>multi_tracker_msgs</name>
    <version>0.0.0</version>
    <description>The multi_tracker_msgs package for multi_tracker</description>
    <maintainer email="theo.gieruc@gmail.com">Théo Gieruc</maintainer>
    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    

</package>
